@@ -298,9 +298,10 @@ A contiguous range of Lambda_n's must be provided, e.g. (3,4,5) or (4,5) or just
 ErrorType
 ---------
 OPTIONAL (but should be present if there is an error set)
-(enum string): replicas, symmhessian, hessian, none
+(enum string): replicas, symmhessian, hessian, custom, none
 
 A set-level declaration of the type of error treatment provided by this set.
+An ending "+as" means that the last two members are alphaS variations.
 
 
 ErrorConfLevel
