@@ -2,6 +2,8 @@
 // Written in March 2014 by G. Watt <Graeme.Watt(at)durham.ac.uk>.
 // Use formulae for PDF uncertainties and correlations in:
 //   G. Watt, JHEP 1109 (2011) 069 [arXiv:1106.5788 [hep-ph]].
+// Also see Section 6 of LHAPDF6 paper [arXiv:1412.7420 [hep-ph]].
+// Extended in July 2015 for ErrorType values ending in "+as"
 
 #include "LHAPDF/LHAPDF.h"
 #include <boost/random.hpp>
@@ -44,6 +46,13 @@ int main(int argc, char* argv[]) {
   printf(labformat.c_str()," #","x","xg","error+","error-","error");
   const LHAPDF::PDFUncertainty xgErr = set.uncertainty(xgAll, -1); // -1 => same C.L. as set
   printf(numformat.c_str(), x, xgErr.central, xgErr.errplus, xgErr.errminus, xgErr.errsymm);
+  if (LHAPDF::endswith(set.errorType(), "+as")) {
+    // If the ErrorType ends in "+as" the last two members correspond to alphaS variation.
+    // In this case, the errors above are combined PDF+alphaS uncertainties, obtained by
+    // adding in quadrature the PDF and alphaS uncertainties, shown separately below.
+    printf(labformat.c_str()," #","x","error_as","error_pdf+","error_pdf-","error_pdf");
+    printf(numformat.c_str(), x, xgErr.err_as, xgErr.errplus_pdf, xgErr.errminus_pdf, xgErr.errsymm_pdf);
+  }
   cout << endl;
 
   // Calculate PDF uncertainty on up-quark distribution.
@@ -51,9 +60,14 @@ int main(int argc, char* argv[]) {
   printf(labformat.c_str()," #","x","xu","error+","error-","error");
   const LHAPDF::PDFUncertainty xuErr = set.uncertainty(xuAll, -1); // -1 => same C.L. as set
   printf(numformat.c_str(), x, xuErr.central, xuErr.errplus, xuErr.errminus, xuErr.errsymm);
+  if (LHAPDF::endswith(set.errorType(), "+as")) {
+    printf(labformat.c_str()," #","x","error_as","error_pdf+","error_pdf-","error_pdf");
+    printf(numformat.c_str(), x, xuErr.err_as, xuErr.errplus_pdf, xuErr.errminus_pdf, xuErr.errsymm_pdf);
+  }
   cout << endl;
 
   // Calculate PDF correlation between gluon and up-quark.
+  // (This is the PDF-only correlation if the ErrorType ends in "+as".)
   const double corr = set.correlation(xgAll, xuAll);
   cout << "Correlation between xg and xu = " << corr << endl;
   cout << endl;
@@ -64,6 +78,11 @@ int main(int argc, char* argv[]) {
   const LHAPDF::PDFUncertainty xgErr90 = set.uncertainty(xgAll, 90); // scale to 90% C.L.
   printf(numformat.c_str(), x, xgErr90.central, xgErr90.errplus, xgErr90.errminus, xgErr90.errsymm);
   cout << "Scaled PDF uncertainties to 90% C.L. using scale = " << xgErr90.scale << endl;
+  if (LHAPDF::endswith(set.errorType(), "+as")) {
+    // If the ErrorType ends in "+as" the same scale factor is applied to the alphaS uncertainty.
+    printf(labformat.c_str()," #","x","error_as","error_pdf+","error_pdf-","error_pdf");
+    printf(numformat.c_str(), x, xgErr90.err_as, xgErr90.errplus_pdf, xgErr90.errminus_pdf, xgErr90.errsymm_pdf);
+  }
   cout << endl;
 
   // Calculate up-quark PDF uncertainty scaled to 1-sigma.
@@ -72,15 +91,24 @@ int main(int argc, char* argv[]) {
   const LHAPDF::PDFUncertainty xuErr1s = set.uncertainty(xuAll); // scale to 1-sigma (default)
   printf(numformat.c_str(), x, xuErr1s.central, xuErr1s.errplus, xuErr1s.errminus, xuErr1s.errsymm);
   cout << "Scaled PDF uncertainties to 1-sigma using scale = " << xuErr1s.scale << endl;
+  if (LHAPDF::endswith(set.errorType(), "+as")) {
+    printf(labformat.c_str()," #","x","error_as","error_pdf+","error_pdf-","error_pdf");
+    printf(numformat.c_str(), x, xuErr1s.err_as, xuErr1s.errplus_pdf, xuErr1s.errminus_pdf, xuErr1s.errsymm_pdf);
+  }
   cout << endl;
 
-  if (set.errorType() == "replicas") {
+  if (LHAPDF::startswith(set.errorType(), "replicas")) {
 
     // Calculate gluon PDF as median and 90% C.L. of replica probability distribution.
     cout << "Gluon distribution at Q = " << Q << " GeV (median and 90% C.L.)" << endl;
     printf(labformat.c_str()," #","x","xg","error+","error-","error");
     const LHAPDF::PDFUncertainty xgErr = set.uncertainty(xgAll, 90, true);
     printf(numformat.c_str(), x, xgErr.central, xgErr.errplus, xgErr.errminus, xgErr.errsymm);
+    if (LHAPDF::endswith(set.errorType(), "+as")) {
+      // If the ErrorType ends in "+as" the alphaS uncertainty is scaled to the requested C.L.
+      printf(labformat.c_str()," #","x","error_as","error_pdf+","error_pdf-","error_pdf");
+      printf(numformat.c_str(), x, xgErr.err_as, xgErr.errplus_pdf, xgErr.errminus_pdf, xgErr.errsymm_pdf);
+    }
     cout << endl;
 
     // Calculate up-quark PDF as median and 68% C.L. of replica probability distribution.
@@ -88,15 +116,21 @@ int main(int argc, char* argv[]) {
     printf(labformat.c_str()," #","x","xu","error+","error-","error");
     const LHAPDF::PDFUncertainty xuErr = set.uncertainty(xuAll, 68, true);
     printf(numformat.c_str(), x, xuErr.central, xuErr.errplus, xuErr.errminus, xuErr.errsymm);
+    if (LHAPDF::endswith(set.errorType(), "+as")) {
+      printf(labformat.c_str()," #","x","error_as","error_pdf+","error_pdf-","error_pdf");
+      printf(numformat.c_str(), x, xuErr.err_as, xuErr.errplus_pdf, xuErr.errminus_pdf, xuErr.errsymm_pdf);
+    }
     cout << endl;
 
-  } else if (set.errorType() == "hessian" || set.errorType() == "symmhessian") {
+  } else if (LHAPDF::startswith(set.errorType(), "hessian") || LHAPDF::startswith(set.errorType(), "symmhessian")) {
 
     // Generate random values from Hessian best-fit and eigenvector values.
     // See: G. Watt and R.S. Thorne, JHEP 1208 (2012) 052 [arXiv:1205.4024 [hep-ph]].
     // Obtain Gaussian random numbers using Boost, but could also use C++11.
 
-    const int neigen = (set.errorType() == "hessian") ? nmem/2 : nmem;
+    // If the ErrorType ends in "+as" exclude the last two members (alphaS variations).
+    const int npdfmem = (LHAPDF::endswith(set.errorType(), "+as")) ? nmem-2 : nmem;
+    const int neigen = (LHAPDF::startswith(set.errorType(), "hessian")) ? npdfmem/2 : npdfmem;
     const unsigned seed = 1234;
     // C++11: default_random_engine generator(seed);
     // C++11: normal_distribution<double> distribution; // mean 0.0, s.d. = 1.0
@@ -123,6 +157,9 @@ int main(int argc, char* argv[]) {
     // applications such as Bayesian reweighting or combining predictions
     // from different groups (as an alternative to taking the envelope).
     // See, for example, material at http://mstwpdf.hepforge.org/random/.
+    // The "randomValueFromHessian" function is the basis of the program
+    // "examples/hessian2replicas.cc" to convert a Hessian set to replicas.
+    cout << endl;
 
   }
 
